--- a/package.json
+++ b/package.json
@@ -8,13 +8,16 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@antv/l7": "^2.9.26",
     "core-js": "^3.8.3",
     "dom-to-image": "^2.6.0",
     "echarts": "^5.4.0",
     "file-saver": "^2.0.5",
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.1",
+    "nb-fe-pdf": "^1.1.11",
     "vue": "^3.2.13",
+    "vue-aliplayer-v3": "^1.0.3",
     "vuedraggable": "^4.1.0"
   },
   "devDependencies": {
@@ -25,7 +28,8 @@
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
-    "html-docx-js-typescript": "^0.1.5"
+    "html-docx-js-typescript": "^0.1.5",
+    "html-loader": "^4.2.0"
   },
   "eslintConfig": {
     "root": true,
@@ -42,7 +46,8 @@
     "rules": {
       "no-debugger": "off",
       "vue/no-unused-components": "off",
-      "no-unused-vars": "off"
+      "no-unused-vars": "off",
+      "vue/comment-directive": "off"
     }
   },
   "browserslist": [
